# CUDACmake

./: .gitignore  CMakeLists.txt  vcpkg.json
include/: core.hpp  corrections.hpp  cudahelpers.hpp  externalcuda.hpp
src/: CMakeLists.txt  core.cpp  core.cu  core.hpp  corrections.cpp  corrections.cu  corrections.hpp  cudahelpers.cpp  cudahelpers.hpp  externalcuda.cpp  externalcuda.cu  externalcuda.hpp  histogrameq.cu
test/: CMakeLists.txt  test.cpp  vulkanhelpers.hpp
